<resources>
    <string name="app_name">Morse Lessons</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="transmission_title">Передача</string>
    <string name="reception_title">Прием</string>
    <string name="learning_title">Обучение</string>
    <string name="start_button">Старт</string>
    <string name="next_button">Далее</string>
    <string name="exit_button">Выход</string>
    <string name="settings_title">Настройки</string>
    <string name="trainer_button">Тренажер</string>
    <string name="dictionary_button">Словарь</string>
    <string name="lessons_title">Уроки</string>
    <string name="dictionary_character_title">Символ</string>
    <string name="dictionary_code_title">Код</string>
    <string name="dictionary_chant_title">Напев</string>
    <string name="listOfLessons_title">Список уроков</string>
    <string name="menu_title">Меню</string>
    <string name="all_letters">Все буквы</string>
    <string name="all_numbers">Все цифры</string>
    <string name="all_punctuation_marks">Все знаки препинания</string>
    <string name="training_symbols">Символы для тренировки</string>
    <string name="select_symbols_title">Выберите символы для тренировки</string>
    <string name="select_symbols_button">Выбрать символы</string>
    <string name="accept_settings_button">ОК</string>
    <string name="character_reception_title">Прием символов</string>
    <string name="text_reception_title">Прием текстов</string>
    <string name="character_transmission_title">Передача символов</string>
    <string name="text_transmission_title">Передача текстов</string>
    <string name="characters_title">Символы</string>
    <string name="texts_title">Тексты</string>
    <string name="show_text_button">Показать текст</string>
    <string name="create_text_button">Создать текст</string>
    <string name="group_number_title">Количество групп:</string>
    <string name="hide_text_button">Скрыть текст</string>
    <string name="check_sound_button">Проверить</string>
    <string name="frequency_settings_title">Частота (Гц)</string>
    <string name="dot_duration_settings_title">Длина точки (мс)</string>
    <string name="tap_button">Tap</string>
</resources>
