<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/select_characters_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/select_symbols_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/characters_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/letters_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_letters" />

        <CheckBox
            android:id="@+id/numbers_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_numbers" />

        <CheckBox
            android:id="@+id/punctuation_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_punctuation_marks" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:text="@string/group_number_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/group_number_editText"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/accept_characters_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:text="@string/accept_settings_button"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
        android:textSize="14sp" />

</LinearLayout>
