<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/select_characters_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/select_symbols_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/characters_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/letters_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_letters" />

        <CheckBox
            android:id="@+id/numbers_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_numbers" />

        <CheckBox
            android:id="@+id/punctuation_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_punctuation_marks" />

        <Button
            android:id="@+id/accept_characters_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:text="@string/accept_settings_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/global_settings_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginLeft="24dp"
                android:background="@android:drawable/ic_menu_manage" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/settings_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
