<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.lessons.Lesson1Activity">

    <Button
        android:id="@+id/nextButton"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:onClick="next"
        android:text="@string/next_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transmissionButton" />

    <Button
        android:id="@+id/learningButton"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:onClick="openLearning"
        android:text="@string/learning_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/receptionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/charactersTextView" />

    <Button
        android:id="@+id/receptionButton"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:onClick="openReception"
        android:text="@string/reception_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/transmissionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learningButton" />

    <Button
        android:id="@+id/transmissionButton"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:onClick="openTransmission"
        android:text="@string/transmission_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receptionButton" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Урок 11"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/charactersTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/charactersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Знаки препинания"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/learningButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <include
        android:id="@+id/bottom_navigation"
        layout="@layout/lesson_bottom_navigation"
        tools:layout_editor_absoluteY="546dp" />

</android.support.constraint.ConstraintLayout>